Fix about page image scrollbars once and for all

--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -56,3 +56,7 @@
   padding: 0;
   overflow: hidden;
 }
+
+.image-container, .image-container > img {
+  overflow: hidden !important;
+}
